<resources>
    <string name="app_name">Android_BLE</string>
    <string name="receive_data">接收数据</string>
    <string name="temperature">温度</string>
    <string name="distance">距离</string>
    <string name="measure">测量</string>
    <string name="rec_reset">清空</string>
    <string name="connect">连接</string>
    <string name="disconnect">断开</string>
    <string name="ble_not_supported">本机不支持蓝牙</string>
    <string name="clear_temperature_data">清空温度数据</string>
    <string name="clear_distance_data">清空距离数据</string>
    <string name="input_hint">text</string>
</resources>
