<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--此处自己定义了一个ToolBar，声明了一个新的命名空间app-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ToolbarPopupTheme"/>

    <!--折线图-->
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/data_chart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layout_marginStart="@dimen/normal_margin_horizontal"
        android:layout_marginEnd="@dimen/normal_margin_horizontal"
        android:layout_marginTop="@dimen/normal_margin_vertical"
        android:layout_marginBottom="@dimen/normal_margin_vertical">

    </com.github.mikephil.charting.charts.LineChart>

    <TextView
        android:id="@+id/tv_data_rec"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/normal_margin_horizontal"
        android:layout_marginEnd="@dimen/normal_margin_horizontal"
        android:padding="@dimen/normal_margin_horizontal"
        android:layout_weight="2"
        android:textSize="15sp"
        android:scrollbarFadeDuration="200"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical"
        android:background="@drawable/tv_border"/>

    <LinearLayout
        android:id="@+id/ll_send_draw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/normal_margin_horizontal"
        android:layout_marginEnd="@dimen/normal_margin_horizontal"
        android:layout_marginTop="@dimen/normal_margin_vertical"
        android:layout_marginBottom="@dimen/normal_margin_vertical"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <RadioGroup
            android:id="@+id/category_group"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <RadioButton
                android:id="@+id/measure_temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/temperature"
                android:checked="true"/>
            <RadioButton
                android:id="@+id/measure_distance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/distance"/>
        </RadioGroup>

        <Button
            android:id="@+id/btn_measure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/normal_margin_horizontal"
            android:layout_marginEnd="@dimen/normal_margin_horizontal"
            android:text="@string/measure"
            android:textSize="18sp"/>

    </LinearLayout>

</LinearLayout>
